@@ -58,8 +58,8 @@ set( CPP_FILES
     utils/fdm_Matrix3x3.cpp
     utils/fdm_Matrix4x4.cpp
     utils/fdm_Matrix6x6.cpp
+    utils/fdm_Oscillation.cpp
     utils/fdm_Quaternion.cpp
-    utils/fdm_Period.cpp
     utils/fdm_Random.cpp
     utils/fdm_String.cpp
     utils/fdm_Table1.cpp
