@@ -1,3 +1,9 @@
+2020-10-10 Marek M. Cel <marekcel@marekcel.pl>
+
+    * oscillations analysis class
+
+
+
 2020-10-03 Marek M. Cel <marekcel@marekcel.pl>
 
     * unit tests
